--- a/src/_includes/footer4.html
+++ b/src/_includes/footer4.html
@@ -23,7 +23,7 @@
           <div class="myborder">
             <h5 class="text-center">NWA Second Stage Transition<span></span></h5>
             <address class="text-center">
-              P.O. Box 1128, </br>Siloam Springs, Arkansas 72761
+              P.O. Box 1128, <br>Siloam Springs, Arkansas 72761
             </address>
           </div>
         </div>
@@ -52,7 +52,7 @@
           </li>
           <li class="text-center">
             <a class="" href='https://www.natpia.com/providers/910/cecelia-dorko/' target='_blank'>
-              <img class="certificate-link rounded-circle" src='https://storage.googleapis.com/parenting-org-static/img/natpia-badge-160.png'/>
+              <img class="certificate-link rounded-circle" src='https://storage.googleapis.com/parenting-org-static/img/natpia-badge-160.png' alt="National Parent Instructor Assocition link to Cecelia's profile."/>
             </a>
           </li>
         </ul>
