--- a/src/contact/index.njk
+++ b/src/contact/index.njk
@@ -12,32 +12,32 @@ templateEngineOverride: njk,md
 <div class="container sectionMod">
   <!-- Three columns of text below the carousel -->
   <div class="row p-3 text-center">
-      <address class="col-lg-4">
-        <h3>Location</h3>
-        <span class="py-2">
+    <div class="col-lg-4">
+      <h3>Location</h3>
+      <address class="py-2">
         608 South Hico Street<br>
         Siloam Springs, AR 72761<br>
-        </span>
-      </address>
-      <address class="col-lg-4">
-        <h3>Phone</h3>
-        <span class="py-2">
+        </address>
+    </div>
+    <div class="col-lg-4">
+      <h3>Phone</h3>
+      <address class="py-2">
           <a class="nav-link" href="tel:14795493737">(479) 549-3737</a><br>
-        </span> 
-      </address>
-      <div class="col-lg-4">
-        <h3>Hours</h3>
-        <span class="py-2">
+        </address>
+    </div>
+    <div class="col-lg-4">
+      <h3>Hours</h3>
+      <span class="py-2">
           Open by appointment<br>
         </span>
-      </div>
     </div>
-  </div><!-- /.row -->
-</div><!-- End of the CONTACT INFORMATION section -->
+  </div>
+</div><!-- /.row -->
+<!-- End of the CONTACT INFORMATION section -->
 <div class="container py-3">
-  <section class="contact-form d-flex flex-row justify-content-center">
+  <div class="contact-form d-flex flex-row justify-content-center">
     <div class="embed-responsive mt-3" style="overflow:hidden;">
       <iframe  width="640" height="1082" frameborder="0" marginheight="0" marginwidth="0" src="https://docs.google.com/forms/d/e/1FAIpQLSf59qzzDJ3IFh_Rw1NDSuLDIuhw8dA3PGmO-OweJQreRNI-hw/viewform?embedded=true">Loading…</iframe>
     </div>
-  </section>
+  </div>
 </div>
