--- a/src/services/index.njk
+++ b/src/services/index.njk
@@ -63,10 +63,12 @@ templateEngineOverride: njk,md
       <h2 class="lead accordion-header fw-normal" id="flushthree">
         <button aria-controls="flush-collapseThree" aria-expanded="false" class="accordion-bttn accordion-button collapsed" data-bs-target="#flush-collapseThree" data-bs-toggle="collapse" type="button">Classes / Groups</button>
         </h2>
-      <div aria-labelledby="flushthree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample"
-        id="flush-collapseThree">
+      <div aria-labelledby="flushthree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample" id="flush-collapseThree">
         <div class="accordion-body">
-          <h3 class="fw-normal">Anger Management Class <span style="white-space: pre;"><a href="{{site.url + 'sign-up/class-group/#'}}"><button type="button" class="btn btn-primary">Sign-up</button></a></span></h3>
+          <form class="py-3" action="{{site.url + 'sign-up/class-group/#'}}" method="get">
+            <button type="button" class="btn btn-primary">Class / Group Sign-UP</button>
+          </form> 
+          <h3 class="fw-normal">Anger Management Class</h3>
           <p class="lead text-left text1">Individuals needing to attend anger management classes are encouraged to take the
             assessment first. Anger management Class can be ordered by a judge, parole officer, probation officer,
             employer, family member, attorney, etc.</p>
@@ -78,20 +80,20 @@ templateEngineOverride: njk,md
             <li class="lead text-left">Obtain positive support from others</li>
           </ol>
           <p class="lead text-left">Anger Management Classes: 4 to 32 hours – based on the evaluation.</p>
-          <h3 class="fw-normal">Domestic Violence Class <span style="white-space: pre;"><a href="{{site.url + 'sign-up/class-group/#'}}"><button type="button" class="btn btn-primary">Sign-up</button></a></span></h3>
+          <h3 class="fw-normal">Domestic Violence Class</h3>
           <p class="lead text-left text2">Domestic Violence can be a single act or a repetition of behavior in relationships
             and could happen to anybody. It is present in every community, regardless of age, gender, sexual orientation,
             race, socioeconomic status, religion, or nationality.</p>
           <p class="lead text-left">Regardless of being a male or female, you must not remain silent.
             "Talk with a friend, family member, coworker, or neighbor about domestic violence".</p>
           <p class="lead text-left">In Person/Virtual Classes available. - 8,12, 16 or 32-hours options</p>
-          <h3 class="fw-normal">Parenting Class <span style="white-space: pre;"><a href="{{site.url + 'sign-up/class-group/#'}}"><button type="button" class="btn btn-primary">Sign-up</button></a></span></h3>
+          <h3 class="fw-normal">Parenting Class</h3>
           <p class="lead text-left text1">Classes are designed to help parents obtain skills needed to raise physically,
             psychologically, and emotionally healthy children. Classes help increase understanding about child
             development
             and work with parents to help their children learn, grow, and develop to meet their full potential.</p>
           <p class="lead text-left">In Person/Virtual Classes available. - 8,12, 16 or 32-hours options</p>
-          <h3 class="fw-normal">Support Group <span style="white-space: pre;"><a href="{{site.url + 'sign-up/class-group/#'}}"><button type="button" class="btn btn-primary">Sign-up</button></a></span></h3>
+          <h3 class="fw-normal">Support Class</h3>
           <p class="lead text-left text2">Creates a place where individuals and families are supported and encouraged to
             discover how to cope with the burden they are carrying and how they can progress with healthy treatment. For
             example: they will learn how to focus on sharing their experiences to help them face and work through
