added partners to get-involved

--- a/src/get-involved.njk
+++ b/src/get-involved.njk
@@ -31,6 +31,24 @@ templateEngineOverride: njk,md
   </div>
   <!-- END Volunteer section -->
   <hr class="featurette-divider">
+<!-- Partners -->
+<div class="p-3 text-center">
+  <div class="col-md-11 mx-auto my-3 ">
+    <h1 class="display-4 pb-3 fw-normal">Community Partners</h1>
+  </div>
+</div>
+<div class="container sectionMod">
+  <div class="row pb-3 justify-content-evenly">
+    <div class="col-lg-2 text-center">
+      <img src="{{site.url + 'assets/arvest-foundation-logo.png'}}" alt="Arvest Foundation">
+    </div>
+    <div class="col-lg-2 text-center">
+      <img src="{{site.url + 'assets/nwa-naturals.png'}}" alt="NWA Naturals">
+    </div>
+  </div>
+</div>
+<!-- END Partners -->
+  <hr class="featurette-divider">
   <!-- START INKIND GIFT CAROUSEL -->
   <div id="inKindGiftHeader" class="position-relative overflow-hidden p-3 p-md-3 m-md-3 text-center">
     <div class="col-md-11 mx-auto my-3 ">
