added partner images

--- a/src/get-involved.njk
+++ b/src/get-involved.njk
@@ -43,7 +43,7 @@ templateEngineOverride: njk,md
       <img src="{{site.url + 'assets/arvest-foundation-logo.png'}}" alt="Arvest Foundation">
     </div>
     <div class="col-lg-2 text-center">
-      <img src="{{site.url + 'assets/nwa-naturals.png'}}" alt="NWA Naturals">
+      <img src="{{site.url + 'assets/nwa-naturals-logo.jpg'}}" alt="NWA Naturals">
     </div>
   </div>
 </div>
