working on updating logo to white

--- a/src/about/index.njk
+++ b/src/about/index.njk
@@ -94,4 +94,7 @@ templateEngineOverride: njk,md
     </div>
   </div>
   <!-- END Our Team -->
+
+  <img src="..." class="img-fluid" alt="Responsive image">
+  
 </div><!-- end container -->
