updated active option in navbar

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -7,7 +7,7 @@
             <hr class="d-md-none text-black-50">
             <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
               <li class="nav-item col-6 col-md-auto">
-                <a class="nav-link p-2 {{ 'active' if '/' in page.url }}" href="{{site.url}}">Home</a>
+                <a class="nav-link p-2 {{ 'active' if 'nwasecondstagetransition.org' == page.url }}" href="{{site.url}}">Home</a>
               </li>
               <li class="nav-item col-6 col-md-auto">
                 <a class="nav-link p-2 {{ 'active' if '/about' in page.url }}" href="{{site.url + 'about/'}}">About</a>
