--- a/src/_layouts/landing.njk
+++ b/src/_layouts/landing.njk
@@ -18,7 +18,7 @@
   <div id="force-below-the-fold">
   <!-- Header -->
   <div class="bg-color">
-    <header  class="navbar navbar-expand-md navbar-dark bd-navbar">{% include '../_includes/header.html' %}</header>
+    <header  class="navbar navbar-expand-md navbar-dark bd-navbar">{% include '../_includes/landing-header.html' %}</header>
   </div>
   <!-- End Header -->
   <!-- Main Content -->
