updated partner image and breadcrumbs for outreach

--- a/src/_includes/css/custom.css
+++ b/src/_includes/css/custom.css
@@ -155,6 +155,12 @@ a:hover {
 .carousel-inner img {
     margin: auto;
 }
+
+.partner-img {
+  width: 6rem;
+  height: auto;
+}
+
 /************************** button ****************************************/
 
 .button {
