--- a/src/get-involved.njk
+++ b/src/get-involved.njk
@@ -40,10 +40,10 @@ templateEngineOverride: njk,md
 <div class="container sectionMod">
   <div class="row pb-3 justify-content-evenly">
     <div class="col-lg-2 text-center">
-      <img class="img-fluid partner-img" src="{{site.url + 'assets/arvest-foundation-logo.png'}}" alt="Arvest Foundation">
+      <img class="img-fluid partner-img py-5" src="{{site.url + 'assets/arvest-foundation-logo.png'}}" alt="Arvest Foundation">
     </div>
     <div class="col-lg-2 text-center">
-      <img class="img-fluid partner-img" src="{{site.url + 'assets/nwa-naturals-logo.jpg'}}" alt="NWA Naturals">
+      <img class="img-fluid partner-img py-5" src="{{site.url + 'assets/nwa-naturals-logo.jpg'}}" alt="NWA Naturals">
     </div>
   </div>
 </div>
