--- a/src/services/index.njk
+++ b/src/services/index.njk
@@ -27,6 +27,9 @@ templateEngineOverride: njk,md
       <div aria-labelledby="flushtwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample"
         id="flush-collapseTwo">
         <div class="accordion-body">
+          <form class="py-3" action="{{site.url + 'sign-up/assessment/#'}}" method="get">
+            <button type="button" class="btn btn-primary">Assessment Sign-Up</button>
+          </form>
           <h3 class="fw-normal">Anger Management Assessment</h3>
           <p class="lead text-left"> Assessments help identify other areas to work on. Anger Management Assessment can
             be ordered by a judge, parole officer, probation officer, employer, family member, attorney, etc.</p>
@@ -66,7 +69,7 @@ templateEngineOverride: njk,md
       <div aria-labelledby="flushthree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample" id="flush-collapseThree">
         <div class="accordion-body">
           <form class="py-3" action="{{site.url + 'sign-up/class-group/#'}}" method="get">
-            <button type="button" class="btn btn-primary">Class / Group Sign-UP</button>
+            <button type="button" class="btn btn-primary">Class / Group Sign-Up</button>
           </form> 
           <h3 class="fw-normal">Anger Management Class</h3>
           <p class="lead text-left text1">Individuals needing to attend anger management classes are encouraged to take the
