updated footer link and donate button

--- a/src/_includes/footer4.html
+++ b/src/_includes/footer4.html
@@ -5,16 +5,16 @@
         <h5 class="text-center">Quick Links<span></span></h5>
         <ul class="container list-unstyled">
           <li class="my-3 text-center">
-            <a class="quick-link" href="{{site.url + 'about/'}}">About</a>
+            <a class="quick-link" href="{{site.url + 'about/'}}" target="_self" rel="noopener noreferrer">About</a>
           </li>
           <li class="my-3 text-center">
-            <a class="quick-link" href="{{site.url + 'events/'}}">Events</a>
+            <a class="quick-link" href="{{site.url + 'outreach/'}}" target="_self" rel="noopener noreferrer">Outreach</a>
           </li>
           <li class="my-3 text-center">
-            <a class="quick-link" href="{{site.url + 'contact/'}}">Contact</a>
+            <a class="quick-link" href="{{site.url + 'contact/'}}" target="_self" rel="noopener noreferrer">Contact</a>
           </li>
           <li class="my-3 text-center">
-            <a  href="https://www.facebook.com/NWA-Second-Stage-Transition-102534804556882/" target="_blank" title="Facebook"><img class="social-link rounded-circle" alt="Facebook" src="{{site.url + 'assets/facebook-logo.png'}}"></a>
+            <a  href="https://www.facebook.com/NWA-Second-Stage-Transition-102534804556882/" target="_blank" rel="noopener noreferrer"title="Facebook"><img class="social-link rounded-circle" alt="Facebook" src="{{site.url + 'assets/facebook-logo.png'}}"></a>
           </li>
         </ul>
       </div>
@@ -33,12 +33,12 @@
         <ul class="list-unstyled">
           <li class="">
             <address class="text-center my-3">
-              <a class="text-center email-link" href="mailto:info@nwasecondstagetransition.org" title="email">info@nwasecondstagetransition.org</a>
+              <a class="phone-link" href="tel:14795493737"  target="_self" rel="noopener noreferrer" title="phone">+1 479 549 3737</a>
             </address>
           </li>
           <li class="">
             <address class="text-center my-3">
-              <a class="phone-link" href="tel:14795493737">+1 479 549 3737</a>
+              <a class="text-center email-link" href="mailto:info@nwasecondstagetransition.org" target="_self" rel="noopener noreferrer" title="email">info@nwasecondstagetransition.org</a>
             </address>
           </li>
         </ul>
@@ -46,12 +46,12 @@
       <div class="col-sm-12 col-lg-4  mx-auto order3">
         <ul class="list-unstyled">
           <li class="text-center">
-            <a class="" href="https://www.guidestar.org/profile/84-2586015">
+            <a class="" target="_blank" rel="noopener" href="https://www.guidestar.org/profile/84-2586015">
               <img class="certificate-link" src="{{site.url + './assets/candid-2022-silver-transparency-award.webp'}}" alt="NWA Second Stage Transition Logo">
             </a>
           </li>
           <li class="text-center">
-            <a class="" href='https://www.natpia.com/providers/910/cecelia-dorko/' target='_blank'>
+            <a class=""  target="_blank" rel="noopener" href='https://www.natpia.com/providers/910/cecelia-dorko/' target='_blank'>
               <img class="certificate-link rounded-circle" src='https://storage.googleapis.com/parenting-org-static/img/natpia-badge-160.png' alt="National Parent Instructor Assocition link to Cecelia's profile."/>
             </a>
           </li>
