--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -32,9 +32,7 @@
                 </ul>
               </li>
               <li class="nav-item col-6 col-md-auto">
-                <form action="https://nwasecondstagetransition.org" method="get">
-                  <button type="button" class="btn btn-warning">Donate</button>
-                </form>              
+                <a class="nav-link p-2 btn text-primary bg-warning" href="https://www.paypal.com/" target="_blank" rel="noopener noreferrer">Donate</a>           
               </li>
             </ul>
           </div>
