--- a/src/index.njk
+++ b/src/index.njk
@@ -8,7 +8,7 @@ templateEngineOverride: njk,md
     <div class="col-md-12 p-3 mb-5 bg-white-transparent rounded">
       <h2 class="cover-heading">After the rain, the sun will shine.</h2>
       <p class="lead">We empower individuals transition to a new stage in life. Learn more about our purpose and vision at NWA Second Stage Transition.</p>
-      <p class="mt-3"><a class="button" href="{{site.url + 'about/'}}">Learn More</a></p>
+      <p class="mt-3"><a class="btn text-primary bg-warning" href="{{site.url + 'about/'}}">Learn More</a></p>
     </div>
   </div>
 </div>
