--- a/src/_includes/css/custom.css
+++ b/src/_includes/css/custom.css
@@ -94,9 +94,6 @@ main {
   padding-bottom: 4rem;
 }
 /*********************** color ******************************************/
-.bg-color {
-  background-color: #0d8ac4;
-}
 .bg-white-transparent {
   background-color: rgba(255, 255, 255, 0.9);
 }
@@ -134,6 +131,9 @@ a:hover {
   font-weight: bolder;
 }
 
+.dropdown-menu{
+  width: 100%;
+}
 
 /************************** container *****************************************/
 
@@ -256,6 +256,7 @@ footer {
   color: #333;
   padding: 5px 10px;
   text-decoration: none;
+  border-radius: 0.25rem;
 }
 
 .certificate-link:hover {
