--- a/src/_includes/landing-header.html
+++ b/src/_includes/landing-header.html
@@ -1,7 +1,7 @@
         <nav aria-label="Main navigation" class="container-xxl flex-wrap flex-md-nowrap">
           
           <a aria-label="NWASST" class="navbar-brand p-0 me-3" href="/"><img alt="logo" class="custom-media me-1 img-fluid" id="logo" src="{{site.url + 'assets/nwasst-logo-with-name-revised-white.svg'}}"></a> 
-          <button aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#bdNavbar" data-bs-toggle="collapse" type="button"><svg class="bi" height="32" viewbox="0 0 16 16" width="32" xmlns="http://www.w3.org/2000/svg">
+          <button aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#bdNavbar" data-bs-toggle="collapse" type="button"><svg class="bi" height="32" viewbox="0 0 16 16" style="color:white;" width="32" xmlns="http://www.w3.org/2000/svg">
           <path d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" fill-rule="evenodd"></path></svg></button>
           <div class="collapse navbar-collapse" id="bdNavbar">
             <hr class="d-md-none text-black-50">
@@ -26,15 +26,13 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle p-2 {{ 'active' if '/sign-up/' in page.url }}" href="#" role="button" data-bs-toggle="dropdown">Sign-Up</a>
-                <ul class="dropdown-menu dropdown-menu-end">
+                <ul class="dropdown-menu dropdown-menu-end ">
                   <li><a class="dropdown-item" href="{{site.url + 'sign-up/assessment/#'}}">Assessment</a></li>
                   <li><a class="dropdown-item" href="{{site.url + 'sign-up/class-group/#'}}">Class / Group</a></li>
                 </ul>
               </li>
               <li class="nav-item col-6 col-md-auto">
-                <form action="https://nwasecondstagetransition.org" method="get">
-                  <button type="button" class="btn btn-warning">Donate</button>
-                </form>              
+                <a class="nav-link p-2 btn text-primary bg-warning" href="https://www.paypal.com/" target="_blank" rel="noopener noreferrer">Donate</a>
               </li>
             </ul>
           </div>
