--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -15,7 +15,7 @@
 </head>
 <body class="">
   <!-- Header -->
-  <div class="bg-color">
+  <div class="bg-primary">
     <header  class="navbar navbar-expand-md navbar-dark bd-navbar">{% include '../_includes/header.html' %}</header>
   </div>
   <!-- End Header -->
@@ -34,7 +34,7 @@
   <main class="mt-5">{{ content | safe }}</main>
   <!-- END Main Content -->
   <!-- Footer -->
-  <footer class="bg-color">{% include '../_includes/footer4.html' %}</footer>
+  <footer class="bg-primary">{% include '../_includes/footer4.html' %}</footer>
   <!-- END Footer -->
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
