--- a/src/_layouts/landing.njk
+++ b/src/_layouts/landing.njk
@@ -17,7 +17,7 @@
 <body class="landing">
   <div id="force-below-the-fold">
   <!-- Header -->
-  <div class="bg-color">
+  <div class="bg-primary">
     <header  class="navbar navbar-expand-md navbar-dark bd-navbar">{% include '../_includes/landing-header.html' %}</header>
   </div>
   <!-- End Header -->
@@ -26,7 +26,7 @@
   <!-- END Main Content -->
   </div>
   <!-- Footer -->
-  <footer class="bg-color">{% include '../_includes/footer4.html' %}</footer>
+  <footer class="bg-primary">{% include '../_includes/footer4.html' %}</footer>
   <!-- END Footer -->
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
