added security feature to the a tag to avoid link hijacking

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -8,7 +8,7 @@
       </address>
     </div>
     <div class="col-sm-12 col-md-4 order2 text-light">
-      <a class="nav-link text-light" href="tel:14795493737">
+      <a class="nav-link text-light" href="tel:14795493737" target="_self" rel="noopener noreferrer">
       <h3 class="footer-heading">Open by appointment</h3>
       <address id="" class="mb-0 footer-content">
         +1 (479) 549-3737
