--- a/src/contact/index.njk
+++ b/src/contact/index.njk
@@ -22,7 +22,7 @@ templateEngineOverride: njk,md
     <div class="col-lg-4">
       <h3>Phone</h3>
       <address class="py-2">
-          <a class="nav-link" href="tel:14795493737">(479) 549-3737</a><br>
+          <a class="nav-link" href="tel:14795493737" target="_self" rel="noopener noreferrer">(479) 549-3737</a><br>
         </address>
     </div>
     <div class="col-lg-4">
