--- a/src/donation-completed.njk
+++ b/src/donation-completed.njk
@@ -10,10 +10,10 @@ templateEngineOverride: njk,md
     <p class="lead fw-normal">Thank you for thinking of us.</p>
   </div>
       <p class="py-3">
-      Any further questions? <a href="mailto:{{site.email}}">Contact us</a>
+      Any further questions? <a href="mailto:{{site.email}}" target="_self" rel="noopener noreferrer" >Contact us</a>
     </p>
     <p class="lead">
-      <a class="btn btn-outline-secondary btn-sm" href="{{site.url}}" role="button">Continue to homepage</a>
+      <a class="btn btn-outline-secondary btn-sm" href="{{site.url}}" role="button" target="_self" rel="noopener noreferrer" >Continue to homepage</a>
     </p>
   <div class="product-device shadow-sm d-none d-md-block"></div>
   <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
