--- a/src/get-involved.njk
+++ b/src/get-involved.njk
@@ -26,7 +26,7 @@ templateEngineOverride: njk,md
         Health
         & Wellness, Life Skills Training, Mentor, and Art Therapy Classes. If any of this
         sounds interesting to you please reach out to us/.</p>
-      <p><a class="btn btn-lg btn-outline-dark" href="mailto:{{ site.email }}">Email Us</a></p>
+      <p><a class="btn btn-lg btn-outline-dark" href="mailto:{{ site.email }}" target="_self" rel="noopener noreferrer" >Email Us</a></p>
     </div>
   </div>
   <!-- END Volunteer section -->
