--- a/src/404.njk
+++ b/src/404.njk
@@ -14,7 +14,7 @@ templateEngineOverride: njk,md
     </p>
 
     <p class="lead">
-      <a class="btn btn-outline-secondary btn-sm" href="{{site.url}}" role="button">Continue to homepage</a>
+      <a class="btn btn-outline-secondary btn-sm" href="{{site.url}}" role="button" target="_self" rel="noopener noreferrer" >Continue to homepage</a>
     </p>
   <div class="product-device shadow-sm d-none d-md-block"></div>
   <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
