--- a/src/_includes/footer2.html
+++ b/src/_includes/footer2.html
@@ -6,7 +6,7 @@
     <div class="pb-1">
       Office Hours By appointment<br>
       <address>
-        <a class="bk-color" href="tel:14795493737">(479) 549-3737</a><br>
+        <a class="bk-color" href="tel:14795493737" target="_self" rel="noopener noreferrer">(479) 549-3737</a><br>
       </address>
     </div>
     <address>
@@ -17,7 +17,7 @@
   <div class="col-sm-12 col-md-3 py-3">
     <ul class="nav  list-unstyled justify-content-end">
       <li class="ms-3">
-        <a class="button" href="https://www.facebook.com/NWA-Second-Stage-Transition-102534804556882">
+        <a class="button" href="https://www.facebook.com/NWA-Second-Stage-Transition-102534804556882" target="_self" rel="noopener noreferrer">
           <span class="fs-5">Find us on </span>
           <svg xmlns="http://www.w3.org/2000/svg" width="2rem" height="auto" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16" alt="facebook logo">
             <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
@@ -25,7 +25,7 @@
         </a>
       </li>
       <li class="ms-3">
-        <a class="text-muted" href="#">
+        <a class="text-muted" href="#" target="_blank" rel="noopener noreferrer">
             <svg xmlns="http://www.w3.org/2000/svg" width="2rem" height="auto" fill="currentColor" class="bi bi-paypal" viewBox="0 0 16 16">
               <path d="M14.06 3.713c.12-1.071-.093-1.832-.702-2.526C12.628.356 11.312 0 9.626 0H4.734a.7.7 0 0 0-.691.59L2.005 13.509a.42.42 0 0 0 .415.486h2.756l-.202 1.28a.628.628 0 0 0 .62.726H8.14c.429 0 .793-.31.862-.731l.025-.13.48-3.043.03-.164.001-.007a.351.351 0 0 1 .348-.297h.38c1.266 0 2.425-.256 3.345-.91.379-.27.712-.603.993-1.005a4.942 4.942 0 0 0 .88-2.195c.242-1.246.13-2.356-.57-3.154a2.687 2.687 0 0 0-.76-.59l-.094-.061ZM6.543 8.82a.695.695 0 0 1 .321-.079H8.3c2.82 0 5.027-1.144 5.672-4.456l.003-.016c.217.124.4.27.548.438.546.623.679 1.535.45 2.71-.272 1.397-.866 2.307-1.663 2.874-.802.57-1.842.815-3.043.815h-.38a.873.873 0 0 0-.863.734l-.03.164-.48 3.043-.024.13-.001.004a.352.352 0 0 1-.348.296H5.595a.106.106 0 0 1-.105-.123l.208-1.32.845-5.214Z"/>
             </svg>
