--- a/src/_includes/footer3.html
+++ b/src/_includes/footer3.html
@@ -8,7 +8,7 @@
   <address>P.O. Box 1128, </br>Siloam Springs, Arkansas 72761
   <br>
   <br>
-  <a class="text-light" href="tel:14795493737">+1 (479) 549-3737</a></address>
+  <a class="text-light" href="tel:14795493737" target="_self" rel="noopener noreferrer">+1 (479) 549-3737</a></address>
   </div>
   </div>
   
@@ -17,29 +17,29 @@
   <h5 class="widget-title">Quick Links<span></span></h5>
   <ul class="thumbnail-widget">
   <li>
-  <div class="thumb-content"><a class="text-light" href="#.">Get Started</a></div>	
+  <div class="thumb-content"><a class="text-light" href="#." target="_self" rel="noopener noreferrer">Get Started</a></div>	
   </li>
   <li>
-  <div class="thumb-content"><a class="text-light" href="#.">Success Stories</a></div>	
+  <div class="thumb-content"><a class="text-light" href="#." target="_self" rel="noopener noreferrer">Success Stories</a></div>	
   </li>
   <li>
-  <div class="thumb-content"><a class="text-light" href="#.">Events</a></div>	
+  <div class="thumb-content"><a class="text-light" href="#." target="_self" rel="noopener noreferrer">Events</a></div>	
   </li>
   <li>
-  <div class="thumb-content"><a class="text-light" href="#.">News</a></div>	
+  <div class="thumb-content"><a class="text-light" href="#." target="_self" rel="noopener noreferrer">News</a></div>	
   </li>
   <li>
-  <div class="thumb-content"><a class="text-light" href="#.">About</a></div>	
+  <div class="thumb-content"><a class="text-light" href="#."target="_self" rel="noopener noreferrer">About</a></div>	
   </li>
   </ul>
   </div>
   </div>
   <div class="col-xs-12 col-sm-6 col-md-3 align-items-evenly">
   <div class="widget no-box d-flex ">
-    <a class="mx-auto" href="https://www.guidestar.org/profile/84-2586015" class="mb-3 me-2 mb-md-0 lh-1">
+    <a class="mx-auto" href="https://www.guidestar.org/profile/84-2586015" class="mb-3 me-2 mb-md-0 lh-1" target="_blank" rel="noopener">
       <img class="mx-auto footer-img" src="{{site.url + './assets/candid-2022-silver-transparency-award.webp'}}" alt="NWA Second Stage Transition Logo">
     </a>
-    <a class="mx-auto" href='https://www.natpia.com/providers/910/cecelia-dorko/' target='_blank'>
+    <a class="mx-auto" href='https://www.natpia.com/providers/910/cecelia-dorko/' target="_blank" rel="noopener">
       <img class="mx-auto footer-img" src='https://storage.googleapis.com/parenting-org-static/img/natpia-badge-160.png'/>
     </a>
   </div>
@@ -48,7 +48,7 @@
   <div class="widget no-box">
   <h5 class="widget-title">Contact Us<span></span></h5>
   
-  <p><a href="mailto:info@nwasecondstagetransition.org" class="text-light" title="email">info@nwasecondstagetransition.org</a></p>
+  <p><a href="mailto:info@nwasecondstagetransition.org" class="text-light" title="email" target="_self" rel="noopener noreferrer">info@nwasecondstagetransition.org</a></p>
   <span class="social-footer2">
   <ul class="social-ul ">
     <li>
