--- a/src/_includes/post-bc.html
+++ b/src/_includes/post-bc.html
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-  <li class="breadcrumb-item breadcrumb-link"><a href="{{site.url}}">Home</a></li>
-  <li class="breadcrumb-item breadcrumb-link"><a href="{{site.url + 'outreach/#'}}">Outreach</a></li>
+  <li class="breadcrumb-item breadcrumb-link"><a href="{{site.url}} target="_self" rel="noopener noreferrer"">Home</a></li>
+  <li class="breadcrumb-item breadcrumb-link"><a href="{{site.url + 'outreach/#'}} target="_self" rel="noopener noreferrer"">Outreach</a></li>
   <li class="breadcrumb-item active" aria-current="page">{{ title }}</li>
 </ol>
