--- a/src/_includes/postlist.njk
+++ b/src/_includes/postlist.njk
@@ -1,3 +1,3 @@
 {% for post in collections.posts %}
-<li><a href="{{ post.url }}">{{ post.data.title }}</a></li>
+<li><a href="{{ post.url }}" target="_self" rel="noopener noreferrer">{{ post.data.title }}</a></li>
 {% endfor %}
