added services carousel

--- a/src/services/index.njk
+++ b/src/services/index.njk
@@ -27,7 +27,7 @@ templateEngineOverride: njk,md
       <div aria-labelledby="flushtwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample"
         id="flush-collapseTwo">
         <div class="accordion-body">
-          <a class="p-2 btn btn-primary" href="{{site.url + 'sign-up/assessment/'}}" rel="noopener noreferrer">Assessment Sign-Up</a>             
+          <a class="p-2 btn btn-primary" href="{{site.url + 'sign-up/assessment/'}}" rel="noopener noreferrer">Assessment Sign-Up</a>
           <h3 class="fw-normal">Anger Management Assessment</h3>
           <p class="lead text-left"> Assessments help identify other areas to work on. Anger Management Assessment can
             be ordered by a judge, parole officer, probation officer, employer, family member, attorney, etc.</p>
@@ -64,11 +64,13 @@ templateEngineOverride: njk,md
       <h2 class="lead accordion-header fw-normal" id="flushthree">
         <button aria-controls="flush-collapseThree" aria-expanded="false" class="accordion-bttn accordion-button collapsed" data-bs-target="#flush-collapseThree" data-bs-toggle="collapse" type="button">Classes / Groups</button>
         </h2>
-      <div aria-labelledby="flushthree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample" id="flush-collapseThree">
+      <div aria-labelledby="flushthree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample"
+        id="flush-collapseThree">
         <div class="accordion-body">
-          <a class="p-2 btn btn-primary" href="{{site.url + 'sign-up/class-group/'}}" rel="noopener noreferrer">Class / Group Sign-Up</a> 
+          <a class="p-2 btn btn-primary" href="{{site.url + 'sign-up/class-group/'}}" rel="noopener noreferrer">Class / Group Sign-Up</a>
           <h3 class="fw-normal">Anger Management Class</h3>
-          <p class="lead text-left text1">Individuals needing to attend anger management classes are encouraged to take the
+          <p class="lead text-left text1">Individuals needing to attend anger management classes are encouraged to take
+            the
             assessment first. Anger management Class can be ordered by a judge, parole officer, probation officer,
             employer, family member, attorney, etc.</p>
           <p class="lead text-left">Purpose of the class: Has anger become a habit for you? How?</p>
@@ -80,8 +82,10 @@ templateEngineOverride: njk,md
           </ol>
           <p class="lead text-left">Anger Management Classes: 4 to 32 hours – based on the evaluation.</p>
           <h3 class="fw-normal">Domestic Violence Class</h3>
-          <p class="lead text-left text2">Domestic Violence can be a single act or a repetition of behavior in relationships
-            and could happen to anybody. It is present in every community, regardless of age, gender, sexual orientation,
+          <p class="lead text-left text2">Domestic Violence can be a single act or a repetition of behavior in
+            relationships
+            and could happen to anybody. It is present in every community, regardless of age, gender, sexual
+            orientation,
             race, socioeconomic status, religion, or nationality.</p>
           <p class="lead text-left">Regardless of being a male or female, you must not remain silent.
             "Talk with a friend, family member, coworker, or neighbor about domestic violence".</p>
@@ -96,7 +100,8 @@ templateEngineOverride: njk,md
           <p class="lead text-left text2">Creates a place where individuals and families are supported and encouraged to
             discover how to cope with the burden they are carrying and how they can progress with healthy treatment. For
             example: they will learn how to focus on sharing their experiences to help them face and work through
-            personal problems, build and maintain healthy relationships. With Support group, individuals or families will meet
+            personal problems, build and maintain healthy relationships. With Support group, individuals or families
+            will meet
             other people who are coping and want to share their stories in a safe setting. The Date/Time may vary.</p>
           <p class="lead text-left">In Person/Virtual Classes available. - 8,12, 16 or 32-hours options</p>
         </div>
@@ -117,7 +122,7 @@ templateEngineOverride: njk,md
             depression, stress, anxiety, self-esteem, anger, and relationships.</p>
           <h3>Substance Abuse Counseling</h3>
           <p class="lead text-left">We provide emotional support to individuals, and conduct one-on-one sessions to
-            overcome their dependency and become self-sufficient. The therapists work with the clients to help them 
+            overcome their dependency and become self-sufficient. The therapists work with the clients to help them
             heal from the trauma inflicted by addiction.</p>
         </div>
       </div>
@@ -139,5 +144,28 @@ templateEngineOverride: njk,md
     </div>
   </div>
   <!-- Accordion - ends -->
- <!-- end servicesCarousel -->
+  <div class="col-sm-12 col-md-12 p-3 m-3">
+    <!-- carousel start -->
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img alt="Support Group" class="d-block w-55" src="/assets/img/group-discusion-612w.jpg">
+        </div>
+        <div class="carousel-item">
+          <img alt="Office" class="d-block w-55" src="/assets/img/office2-w525.jpg">
+        </div>
+        <div class="carousel-item">
+          <img alt="Self help books" class="d-block w-55" src="/assets/img/dv-book-720w.jpg">
+        </div>
+      </div>
+      <button class="carousel-control-prev w-50" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next w-50" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div><!-- carousel end -->
+  </div>
 </div> <!-- end container -->
