working on service carousel

--- a/src/services/index.njk
+++ b/src/services/index.njk
@@ -144,18 +144,18 @@ templateEngineOverride: njk,md
     </div>
   </div>
   <!-- Accordion - ends -->
-  <div class="col-sm-12 col-md-12 p-3 m-3">
+  <div class="col-sm-12 col-md-12 p-3 m-3 w-75 mx-auto">
     <!-- carousel start -->
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img alt="Support Group" class="d-block w-55" src="/assets/img/group-discusion-612w.jpg">
+          <img alt="Support Group" class="d-block" src="/assets/img/group-discusion-612w.jpg">
         </div>
         <div class="carousel-item">
-          <img alt="Office" class="d-block w-55" src="/assets/img/office2-w525.jpg">
+          <img alt="Office" class="d-block" src="/assets/img/office2-w525.jpg">
         </div>
         <div class="carousel-item">
-          <img alt="Self help books" class="d-block w-55" src="/assets/img/dv-book-720w.jpg">
+          <img alt="Self help books" class="d-block" src="/assets/img/dv-book-720w.jpg">
         </div>
       </div>
       <button class="carousel-control-prev w-50" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
