--- a/src/services/index.njk
+++ b/src/services/index.njk
@@ -27,7 +27,7 @@ templateEngineOverride: njk,md
       <div aria-labelledby="flushtwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample"
         id="flush-collapseTwo">
         <div class="accordion-body">
-          <a class="p-2 btn btn-primary" href="{{site.url + 'sign-up/assessment/'}}" rel="noopener noreferrer">Assessment Sign-Up</a>
+          <a class="p-2 my-3 btn btn-primary" href="{{site.url + 'sign-up/assessment/'}}" rel="noopener noreferrer">Assessment Sign-Up</a>
           <h3 class="fw-normal">Anger Management Assessment</h3>
           <p class="lead text-left"> Assessments help identify other areas to work on. Anger Management Assessment can
             be ordered by a judge, parole officer, probation officer, employer, family member, attorney, etc.</p>
@@ -67,7 +67,7 @@ templateEngineOverride: njk,md
       <div aria-labelledby="flushthree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample"
         id="flush-collapseThree">
         <div class="accordion-body">
-          <a class="p-2 btn btn-primary" href="{{site.url + 'sign-up/class-group/'}}" rel="noopener noreferrer">Class / Group Sign-Up</a>
+          <a class="p-2 my-3 btn btn-primary" href="{{site.url + 'sign-up/class-group/'}}" rel="noopener noreferrer">Class / Group Sign-Up</a>
           <h3 class="fw-normal">Anger Management Class</h3>
           <p class="lead text-left text1">Individuals needing to attend anger management classes are encouraged to take
             the
