fixed carousel on service page

--- a/src/about/index.njk
+++ b/src/about/index.njk
@@ -107,28 +107,28 @@ templateEngineOverride: njk,md
     <div class="carousel-inner">
       <div class="carousel-item active">
         <div class="container">
-          <div class="carousel-caption align-items-center h-75">
+          <div class="carousel-caption align-items-center w-75">
             <img alt="a counselor" class="d-block fuild-img" src="{{site.url + 'assets/counselor.jpg'}}">
           </div>
         </div>
       </div>
       <div class="carousel-item">
         <div class="container">
-          <div class="carousel-caption align-items-center h-75">
+          <div class="carousel-caption align-items-center w-75">
             <img alt="a picture with different words being used to describe Counseling" class="d-block fuild-img" src="{{site.url + 'assets/counseling.jpg'}}">
           </div>
         </div>
       </div>
       <div class="carousel-item">
         <div class="container">
-          <div class="carousel-caption align-items-center h-75">
+          <div class="carousel-caption align-items-center w-75">
             <img alt="a group of parents and kids discussion issues." class="d-block fuild-img" src="{{site.url + 'assets/parenting-group.jpg'}}">
           </div>
         </div>
       </div>
       <div class="carousel-item">
         <div class="container">
-          <div class="carousel-caption align-items-center h-75">
+          <div class="carousel-caption align-items-center w-75">
             <img alt="someone enjoying the a sunrise or sunset." class="d-block fuild-img" src="{{site.url + 'assets/sunrise.jpg'}}">
           </div>
         </div>
