--- a/src/about/index.njk
+++ b/src/about/index.njk
@@ -121,7 +121,7 @@ templateEngineOverride: njk,md
       </div>
       <div class="carousel-item">
         <div class="container">
-          <div class="carousel-caption align-items-center w-75">
+          <div class="carousel-caption align-items-center w-50">
             <img alt="a group of parents and kids discussion issues." class="d-block fuild-img" src="{{site.url + 'assets/parenting-group.jpg'}}">
           </div>
         </div>
@@ -135,13 +135,12 @@ templateEngineOverride: njk,md
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#imgCarousel" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
     <button class="carousel-control-next" type="button" data-bs-target="#imgCarousel" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-  </div>
-  <!-- END imgCarousel -->  
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>  <!-- END imgCarousel -->  
 </div><!-- end container -->
