fixed parenting-group image

--- a/src/about/index.njk
+++ b/src/about/index.njk
@@ -121,8 +121,8 @@ templateEngineOverride: njk,md
       </div>
       <div class="carousel-item">
         <div class="container">
-          <div class="carousel-caption align-items-center w-50">
-            <img alt="a group of parents and kids discussion issues." class="d-block fuild-img" src="{{site.url + 'assets/parenting-group.jpg'}}">
+          <div class="carousel-caption align-items-center w-75">
+            <img alt="a group of parents and kids discussion issues." class="d-block fuild-img w-50" src="{{site.url + 'assets/parenting-group.jpg'}}">
           </div>
         </div>
       </div>
