--- a/src/outreach.njk
+++ b/src/outreach.njk
@@ -6,7 +6,7 @@ title: We believe in community and like to be involved.
 <div class="container">
   <div id="ourStory" class="position-relative overflow-hidden p-3 p-md-3 m-md-3 text-center">
     <div class="col-md-11 mx-auto my-3 ">
-      <h1 class="display-4 pb-3 fw-normal">Community Outreach</h1>
+      <h1 class="display-4 pb-3 fw-normal">Outreach</h1>
       <p class="lead fw-normal">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab fugit, excepturi obcaecati sed, quasi officiis quis quod magni ut placeat a voluptatum debitis porro dolores.</p>
     </div>
   </div>
