restructured folders/files

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,27 +1,65 @@
-<div class="d-flex text-center container justify-content-center">
+<div class="container">
+  <div class="text-light border-box">
+    <div class="row">
+      <div class="col-sm-12 col-lg-4  mx-auto order1">
+        <h5 class="text-center">Quick Links<span></span></h5>
+        <ul class="container list-unstyled">
+          <li class="my-3 text-center">
+            <a class="quick-link" href="{{site.url + 'about/'}}" target="_self" rel="noopener noreferrer">About</a>
+          </li>
+          <li class="my-3 text-center">
+            <a class="quick-link" href="{{site.url + 'outreach/'}}" target="_self" rel="noopener noreferrer">Outreach</a>
+          </li>
+          <li class="my-3 text-center">
+            <a class="quick-link" href="{{site.url + 'contact/'}}" target="_self" rel="noopener noreferrer">Contact</a>
+          </li>
+          <li class="my-3 text-center">
+            <a  href="https://www.facebook.com/NWA-Second-Stage-Transition-102534804556882/" target="_blank" rel="noopener noreferrer"title="Facebook"><img class="social-link rounded-circle" alt="Facebook" src="{{site.url + 'assets/facebook-logo.png'}}"></a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-sm-12 col-lg-4  mx-auto order2">
+        <div class="myborder2">
+          <div class="myborder">
+            <h5 class="text-center">NWA Second Stage Transition<span></span></h5>
+            <address class="text-center">
+              P.O. Box 1128, <br>Siloam Springs, Arkansas 72761
+            </address>
+          </div>
+        </div>
+        <p class="text-center my-3">
+          Call to make an appointment.
+        </p>
+        <ul class="list-unstyled">
+          <li class="">
+            <address class="text-center my-3">
+              <a class="phone-link" href="tel:14795493737"  target="_self" rel="noopener noreferrer" title="phone">+1 479 549 3737</a>
+            </address>
+          </li>
+          <li class="">
+            <address class="text-center my-3">
+              <a class="text-center email-link" href="mailto:info@nwasecondstagetransition.org" target="_self" rel="noopener noreferrer" title="email">info@nwasecondstagetransition.org</a>
+            </address>
+          </li>
+        </ul>
+      </div>
+      <div class="col-sm-12 col-lg-4  mx-auto order3">
+        <ul class="list-unstyled">
+          <li class="text-center">
+            <a class="" target="_blank" rel="noopener" href="https://www.guidestar.org/profile/84-2586015">
+              <img class="certificate-link" src="{{site.url + './assets/candid-2022-silver-transparency-award.webp'}}" alt="NWA Second Stage Transition Logo">
+            </a>
+          </li>
+          <li class="text-center">
+            <a class=""  target="_blank" rel="noopener" href='https://www.natpia.com/providers/910/cecelia-dorko/' target='_blank'>
+              <img class="certificate-link rounded-circle" src='https://storage.googleapis.com/parenting-org-static/img/natpia-badge-160.png' alt="National Parent Instructor Assocition link to Cecelia's profile."/>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <div class="row">
-    <div class="col-sm-12 col-md-4 order1 text-light">
-      <h3 class="footer-name">NWA Second Stage Transition</h3>
-      <address class="footer-content">
-        PO Box 72761<br>
-        Siloam Springs, AR 72761<br>
-      </address>
-    </div>
-    <div class="col-sm-12 col-md-4 order2 text-light">
-      <a class="nav-link text-light" href="tel:14795493737" target="_self" rel="noopener noreferrer">
-      <h3 class="footer-heading">Open by appointment</h3>
-      <address id="" class="mb-0 footer-content">
-        +1 (479) 549-3737
-      </address>
-      </a>
-      <div class="mb-3 mt-1">
-        <a class="button" href="{{site.url + 'contact/'}}" rel="noopener noreferrer">Contact us</a>
-      </div>
-    </div>
-    <div class="col-sm-12 col-md-4 order3 text-light">
-      <div class="mb-3">
-        <a class="button display-inline" href="https://www.facebook.com/NWA-Second-Stage-Transition-102534804556882" rel="noopener noreferrer" target="_blank">Find us on <img alt="link to facebook" class="fb-img" src="assets/facebook.svg"></a>
-      </div>
-    </div>
+    <p class="text-light text-center pt-2">Copyright NWA Second Stage Transition © 2022. All rights reserved.</p>
   </div>
 </div>
