--- a/src/about/index.njk
+++ b/src/about/index.njk
@@ -129,7 +129,7 @@ templateEngineOverride: njk,md
       <div class="carousel-item">
         <div class="container">
           <div class="carousel-caption align-items-center w-75">
-            <img alt="someone enjoying the a sunrise or sunset." class="d-block fuild-img" src="{{site.url + 'assets/sunrise.jpg'}}">
+            <img alt="someone enjoying the a sunrise or sunset." style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.url + 'assets/sunrise.jpg'}}">
           </div>
         </div>
       </div>
