--- a/src/_layouts/landing.njk
+++ b/src/_layouts/landing.njk
@@ -1,36 +1,39 @@
+---
+templateLayoutResolver: njk, md
+---
 <!DOCTYPE html>
-<html class="landing" lang="en">
-
+<html lang="en">
 <head>
   <!-- Head -->
   {% include '../_includes/head.html' %}
   <!-- END Head -->
-  <style>
-    /** bootstrap 5.1.3 **/
-    {% include '../_includes/css/bootstrap51.css'%}
-    /** END bootstrap 5.1.3 **/
-    /** Custom CSS **/
-    {% include '../_includes/css/custom.css'%}
-    /** END Custom CSS **/
-  </style>
 </head>
 <body class="landing">
-  <div id="force-below-the-fold">
   <!-- Header -->
   <div class="bg-primary">
     <header  class="navbar navbar-expand-md navbar-dark bd-navbar">{% include '../_includes/landing-header.html' %}</header>
   </div>
   <!-- End Header -->
+  {% if page.fileSlug != "" %}
+  <!-- breadcrumb -->
+  <nav aria-label="breadcrumb" class="container">
+    {% if '/outreach/*' in page.url %}
+      {% include '../_includes/post-bc.html' %}
+    {% else %}
+      {% include '../_includes/base-bc.html' %}    
+    {% endif %}
+  </nav>
+  <!-- END breadcrumb -->
+  {% endif %}
   <!-- Main Content -->
-  <main class="container mt-5">{{ content | safe }}</main>
+  <main class="mt-5">{{ content | safe }}</main>
   <!-- END Main Content -->
-  </div>
   <!-- Footer -->
-  <footer class="bg-primary">{% include '../_includes/footer4.html' %}</footer>
+  <footer class="bg-primary">{% include '../_includes/footer.html' %}</footer>
   <!-- END Footer -->
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>{% include '../_includes/footerScript.html' %}</script>
+  <script src="{{site.url + 'javascript/footer-javascript.js'}}"></script>
   <!-- END Scripts -->
 </body>
 </html>
