--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -14,7 +14,7 @@
             <a class="quick-link" href="{{site.url + 'contact/'}}" target="_self" rel="noopener noreferrer">Contact</a>
           </li>
           <li class="my-3 text-center">
-            <a  href="https://www.facebook.com/NWA-Second-Stage-Transition-102534804556882/" target="_blank" rel="noopener noreferrer"title="Facebook"><img class="social-link rounded-circle" alt="Facebook" src="{{site.url + 'assets/facebook-logo.png'}}"></a>
+            <a  href="https://www.facebook.com/NWA-Second-Stage-Transition-102534804556882/" target="_blank" rel="noopener noreferrer"title="Facebook"><img class="social-link rounded-circle" alt="Facebook" src="{{site.url + 'images/facebook-logo.png'}}"></a>
           </li>
         </ul>
       </div>
@@ -47,7 +47,7 @@
         <ul class="list-unstyled">
           <li class="text-center">
             <a class="" target="_blank" rel="noopener" href="https://www.guidestar.org/profile/84-2586015">
-              <img class="certificate-link" src="{{site.url + './assets/candid-2022-silver-transparency-award.webp'}}" alt="NWA Second Stage Transition Logo">
+              <img class="certificate-link" src="{{site.url + './images/candid-2022-silver-transparency-award.webp'}}" alt="NWA Second Stage Transition Logo">
             </a>
           </li>
           <li class="text-center">
