--- a/src/about/index.njk
+++ b/src/about/index.njk
@@ -108,28 +108,28 @@ templateEngineOverride: njk,md
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption align-items-center w-75">
-            <img alt="a counselor" class="d-block fuild-img" src="{{site.url + 'assets/counselor.jpg'}}">
+            <img alt="a counselor" class="d-block fuild-img" src="{{site.url + 'images/counselor.jpg'}}">
           </div>
         </div>
       </div>
       <div class="carousel-item">
         <div class="container">
           <div class="carousel-caption align-items-center w-75">
-            <img alt="a picture with different words being used to describe Counseling" class="d-block fuild-img" src="{{site.url + 'assets/counseling.jpg'}}">
+            <img alt="a picture with different words being used to describe Counseling" class="d-block fuild-img" src="{{site.url + 'images/counseling.jpg'}}">
           </div>
         </div>
       </div>
       <div class="carousel-item">
         <div class="container">
           <div class="carousel-caption align-items-center w-75">
-            <img alt="a group of parents and kids discussion issues." class="d-block fuild-img w-50" src="{{site.url + 'assets/parenting-group.jpg'}}">
+            <img alt="a group of parents and kids discussion issues." class="d-block fuild-img w-50" src="{{site.url + 'images/parenting-group.jpg'}}">
           </div>
         </div>
       </div>
       <div class="carousel-item">
         <div class="container">
           <div class="carousel-caption align-items-center w-75">
-            <img alt="someone enjoying the a sunrise or sunset." style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.url + 'assets/sunrise.jpg'}}">
+            <img alt="someone enjoying the a sunrise or sunset." style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.url + 'images/sunrise.jpg'}}">
           </div>
         </div>
       </div>
